--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gulp": "^3.9.0",
     "jade": "^1.11.0",
     "mongodb": "^2.0.40",
-    "mongoose": "^4.1.2",
+    "mongoose": "^5.x.x",
     "morgan": "^1.6.1",
     "nodemon": "^1.18.11",
     "package.json": "^2.0.1",
